--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,11 +2,11 @@
 # tasks file for virtuoso
 
 - name: Update aptitude cache and install dependencies.
-  apt: 
-  	pkg: {{ item }} 
-  	state: present 
-  	update_cache: yes 
-  	cache_valid_time: 3600
+  apt:
+    pkg = {{ item }}
+  	state = present 
+  	update_cache = yes 
+  	cache_valid_time = 3600
   with_items:
   	- git
   	- autoconf
@@ -24,24 +24,24 @@
 
 - name: Clone stable/7 branch of Virtuoso Github repo.
   git: 
-  	repo: https://github.com/openlink/virtuoso-opensource.git
-  	dest: /tmp/virtuoso
-  	version: stable/7
+    repo = https://github.com/openlink/virtuoso-opensource.git
+  	dest = /tmp/virtuoso
+  	version = stable/7
 
 - name: Autogen the build configuration
   commnad: /tmp/virtuoso/autogen.sh 
-  	chdir: /tmp/virtuoso 
-  	creates: /tmp/virtuoso/autogen.log
-  	executable: /bin/bash
+  	chdir = /tmp/virtuoso 
+  	creates = /tmp/virtuoso/autogen.log
+  	executable = /bin/bash
 
 - name: Configure Makefile
   command: /tmp/virtuoso/configure --prefix={{ virtuoso_install_dir }}
-  	chdir: /tmp/virtuoso
-  	creates: /tmp/virtuoso/Makefile
-  	environment:
-  	  cflags: "-O2 -m64"
+  	chdir = /tmp/virtuoso
+  	creates = /tmp/virtuoso/Makefile
+  environment:
+  	 cflags: "-O2 -m64"
 
- - name: Build Virtuoso from source
-   command: make && make install
-   	chdir: /tmp/virtuoso
-   	creates: {{ virtuoso_install_dir }}
+- name: Build Virtuoso from source
+  command: make && make install
+    chdir = /tmp/virtuoso
+   	creates = {{ virtuoso_install_dir }}
