--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  author: your name
-  description: 
-  company: your company (optional)
+  author: Nolan Nichols
+  description: Virtuoso
+  company: University of Washington
   # Some suggested licenses:
   # - BSD (default)
   # - MIT
@@ -10,8 +10,8 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
-  min_ansible_version: 1.2
+  license: Apache
+  min_ansible_version: 1.4
   #
   # Below are all platforms currently available. Just uncomment
   # the ones that apply to your role. If you don't see your 
@@ -64,9 +64,9 @@ galaxy_info:
   #  - 9.1
   #  - 9.1
   #  - 9.2
-  #- name: Ubuntu
-  #  versions:
-  #  - all
+  - name: Ubuntu
+    versions:
+    - all
   #  - lucid
   #  - maverick
   #  - natty
@@ -114,9 +114,13 @@ galaxy_info:
   #- packaging
   #- system
   #- web
-dependencies: []
+dependencies:
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
-  
+  - {role: nicholsn.supervisor, 
+     name: virtuoso,
+     command: {{ virtuoso_install_dir }}/bin/virtuoso-t +wait +configfile {{ virtuoso_install_dir }}/var/lib/virtuoso/db/virtuoso.ini,
+     directory: /root
+     user: root}
