--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,7 +19,7 @@
     - m4
     - make
     - openssl
-    - libssl-dev    
+    - libssl-dev
 
 - name: Clone stable/7 branch of Virtuoso Github repo.
   git: 
@@ -27,20 +27,29 @@
     dest=/tmp/virtuoso
     version=stable/7
 
-- name: Autogen the build configuration
+- name: Autogen the Virtuoso build configuration
   command: /tmp/virtuoso/autogen.sh 
     chdir=/tmp/virtuoso 
     creates=/tmp/virtuoso/autogen.log
     executable=/bin/bash
 
-- name: Configure Makefile
+- name: Configure Makefile.
   command: /tmp/virtuoso/configure --prefix={{ virtuoso_install_dir }}
     chdir=/tmp/virtuoso
     creates=/tmp/virtuoso/Makefile
   environment:
      cflags: "-O2 -m64"
 
-- name: Build Virtuoso from source
-  command: make && make install
+- name: Build Virtuoso from source.
+  command: make install
     chdir=/tmp/virtuoso
-    creates={{ virtuoso_install_dir }}
+    creates={{ virtuoso_install_dir }}/bin/virtuoso-t
+  notify: restart supervisord
+
+- name: Copy isql file to enable sparql
+  copy: 
+    src=virtuoso.isql
+    dest=/tmp/virtuoso.isql
+
+- name: Run isql script to enable sparql permissions.
+  command: {{ virtuoso_install_dir }}/bin/isql 1111 dba dba VERBOSE=OFF BANNER=OFF PROMPT=OFF ECHO=OFF BLOBS=ON ERRORS=stdout /tmp/virtuoso.isql
