--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,7 +28,7 @@
     version=stable/7
 
 - name: Autogen the Virtuoso build configuration
-  command: /tmp/virtuoso/autogen.sh 
+  shell: /tmp/virtuoso/autogen.sh 
     chdir=/tmp/virtuoso 
     creates=/tmp/virtuoso/autogen.log
     executable=/bin/bash
@@ -44,7 +44,7 @@
   command: make install
     chdir=/tmp/virtuoso
     creates={{ virtuoso_install_dir }}/bin/virtuoso-t
-  notify: restart supervisord
+  notify: start virtuoso
 
 - name: Copy isql file to enable sparql
   copy: 
@@ -52,4 +52,4 @@
     dest=/tmp/virtuoso.isql
 
 - name: Run isql script to enable sparql permissions.
-  command: "{{ virtuoso_install_dir }}/bin/isql 1111 dba dba VERBOSE=OFF BANNER=OFF PROMPT=OFF ECHO=OFF BLOBS=ON ERRORS=stdout /tmp/virtuoso.isql"
+  command: "{{ virtuoso_install_dir }}/bin/isql 1111 dba dba VERBOSE=OFF BANNER=OFF PROMPT=OFF ECHO=OFF BLOBS=ON ERRORS=stdout /tmp/virtuoso.isql"1
