fix: typo in meta for dir and user

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -122,5 +122,6 @@ dependencies:
   - {role: nicholsn.supervisor, 
      name: virtuoso,
      command: "{{ virtuoso_install_dir }}/bin/virtuoso-t +foreground",
-     directory: "{{ virtuoso_insta1ll_dir }}/var/lib/virtuoso/db",
-     startsecs: 10}
+     directory: "{{ virtuoso_install_dir }}/var/lib/virtuoso/db",
+     startsecs: 10,
+     user: root}
