--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,7 +2,7 @@
 # handlers file for virtuoso
 
 - name: start virtuoso 
-  supervisorctl: name=virtuoso state=restarted
+  service: name=supervisor state=restarted
 
 - name: stop virtuoso
   supervisorctl: name=virtuoso state=stopped
