--- a/meta/main.yml
+++ b/meta/main.yml
@@ -124,4 +124,5 @@ dependencies:
      command: "{{ virtuoso_install_dir }}/bin/virtuoso-t +foreground",
      directory: "{{ virtuoso_install_dir }}/var/lib/virtuoso/db",
      startsecs: 10,
+     autostart: "false",
      user: root}
