rf: separate wait_for and run isql

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,18 +43,18 @@
 - name: Build Virtuoso from source.
   command: make install
     chdir=/tmp/virtuoso
-    creates={{ virtuoso_install_dir }}/bin/virtuoso-t
+    creates="{{ virtuoso_install_dir }}/bin/virtuoso-t"
 
 - name: Copy isql file to enable sparql
-  copy: 
-    src=virtuoso.isql
-    dest=/tmp/virtuoso.isql
+  copy: src=virtuoso.isql dest=/tmp/virtuoso.isql
 
 - name: Start virtuoso 
   supervisorctl: name=virtuoso state=restarted
 
-- name: Run isql script to enable sparql permissions.
+- name: Wait for virtuoso port to be open
   wait_for: port=1111 delay=10
+
+- name: Run isql script to enable sparql permissions.
   command: "{{ virtuoso_install_dir }}/bin/isql 1111 dba dba VERBOSE=OFF BANNER=OFF PROMPT=OFF ECHO=OFF BLOBS=ON ERRORS=stdout /tmp/virtuoso.isql"
   notify:
     - stop virtuoso
