fix: supervisor tweaks

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,6 +7,9 @@
 - name: clean source files
   file: path=/tmp/virtuoso state=absent
 
+- name: stop supervisor
+  service: name=supervisor state=stopped
+
 - name: remove build libs
   apt:
     pkg={{ item }}
