--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
     update_cache=yes 
     cache_valid_time=3600
   with_items:
-    - git1
+    - git
     - build-essential
 
 - name: Clone stable/7 branch of Virtuoso Github repo.
