fix: more configuration

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,6 +17,8 @@
     - gawk
     - gperf
     - libtool
+    - openssl
+    - libssl-dev
 
 - name: Clone stable/7 branch of Virtuoso Github repo.
   git: 
