--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,11 +20,11 @@
     - openssl
     - libssl-dev
 
-- name: Clone stable/7 branch of Virtuoso Github repo.
+- name: Clone develop/7 branch of Virtuoso Github repo.
   git: 
     repo=https://github.com/openlink/virtuoso-opensource.git
     dest=/tmp/virtuoso
-    version=stable/7
+    version=develop/7
 
 - name: Autogen the Virtuoso build configuration
   shell: /tmp/virtuoso/autogen.sh 
